--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
   ACTION:
     description: "Terraform action to perform."
     required: true
-  GITHUB_API_TOKEN:
+  ACCESS_TOKEN:
     description: "Token used to authenticate to the GitHub API for commenting on PRs."
     required: true
   REPO_OWNER:
@@ -27,6 +27,6 @@ runs:
     - ${{ inputs.TFPATH }}
     - ${{ inputs.REGION }}
     - ${{ inputs.ACTION }}
-    - ${{ inputs.GITHUB_API_TOKEN }}
+    - ${{ inputs.ACCESS_TOKEN }}
     - ${{ inputs.REPO_OWNER }}
     - ${{ inputs.REPO_NAME }}
